更改SpringBoot启动图标。

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,10 +2,10 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>公众号demo首页</title>
+    <title>鍏紬鍙穒ndex椤甸潰</title>
    
 </head>
 <body>
-	公众号测试功能 this is mvn.war  --jm
+	 this is mvn.war -- jm
 </body>
 </html>
