--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>公众号index页面</title>
-   
+	<title>mvn-index-page</title>
+
 </head>
 <body>
-	 this is mvn.war -- jm
+	<div>
+		<pre>
+                       .::::.
+                     .::::::::.
+                    :::::::::::
+                 ..:::::::::::'
+              ::::::::::::'
+                .::::::::::
+           ::::::::::::::..
+                ..::::::::::::.
+              ``::::::::::::::::
+               ::::``:::::::::'        .:::.
+              ::::'   ':::::'       .::::::::.
+            .::::'      ::::     .:::::::'::::.
+           .:::'       :::::  .:::::::::' ':::::.
+          .::'        :::::.:::::::::'      ':::::.
+         .::'         ::::::::::::::'         ``::::.
+     ...:::           ::::::::::::'              ``::.
+    ```` ':.          ':::::::::'                  ::::..
+                       '.:::::'                    ':'````..
+	 
+		</pre>
+	</div>
+	<div style="text-align: center"><h2>this is mvn.war -- jm</h2></div>
 </body>
 </html>
