--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,5 +30,7 @@
 		</pre>
 	</div>
 	<div style="text-align: center"><h2>this is mvn.war -- jm</h2></div>
+	<div style="padding-left: 20px;padding-right: 20px"><h2>this is mvn.war -- jm</h2></div>
+	
 </body>
 </html>
